# expense-manager

./: .env.default  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
expense_manager/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
expense_manager/migrations/: 0001_initial.py
expense_manager/tests/: factories.py  test_api.py  test_service.py
stream_consumer/: Dockerfile  apps.py  base.py  consumer.py  expense_processor.py  factory.py  stream_utils.py
stream_consumer/tests/: test_consumer.py
xcnt/: asgi.py  config.py  exceptions.py  settings.py  urls.py  wsgi.py
